Fix sidebar handle buffer overlapping scrollbars

--- a/frontend/src/components/collection/ListsUI/style.scss
+++ b/frontend/src/components/collection/ListsUI/style.scss
@@ -9,6 +9,9 @@
 
     .wr-coll-sidebar__contentOuter {
         overflow: auto !important;
+
+        // sidebar handle buffer
+        margin-right: .4rem;
     }
 
     .sidebar-header {
